<resources>
    <string name="app_name">SapiHub</string>
    <string name="moodleName">Moodle felhasználónév</string>
    <string name="moodlePassword">Moodle jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="rememberMe">Emlékezz rám</string>
    <string name="loginError">"Érvénytelen belépés, próbálja újra"</string>
    <string name="menu">Menü</string>
    <string name="notifications">Értesítések</string>
    <string name="home">Főoldal</string>
    <string name="messages">Üzenetek</string>
    <string name="profile">Profil</string>
    <string name="loading">Betöltés…</string>
    <string name="uploading">Feltöltés…</string>
    <string name="news">Hírek</string>
    <string name="deadlines">Határidők</string>
    <string name="logOut">Kijelentkezés</string>
    <string name="timeTable">Órarend</string>
    <string name="settings">Beállítások</string>
    <string-array name="homeMenu">
        <item>@string/deadlines</item>
        <item>@string/timeTable</item>
        <item>@string/settings</item>
        <item>@string/logOut</item>
        <!--
        <item>Elérhetőségek</item>
        <item>Tanévszerkezet</item>
        <item>Határidők</item>
        <item>Pályázatok</item>
        <item>Rendezvények</item>
        <item>Adminisztráció</item>
        -->
    </string-array>
    <string name="addNews">Új hír hozzáadása</string>
    <string name="newsTitle">Cím</string>
    <string name="addImage">Kép hozzáadása</string>
    <string name="send">Küldés</string>
    <string name="emptyField">A mező nem lehet üres!</string>
    <string name="commentSent">Hozzászólás elküldve</string>
    <string name="cancel">Mégse</string>
    <string name="save">Mentés</string>
    <string name="events">Események:</string>
    <string name="upcomingEvent">Közelgő esemény:</string>
    <string name="addProfileData">Profil adatok megadása</string>
    <string name="teacher">Oktató</string>
    <string name="student">Hallgató</string>
    <string-array name="departmentList">
        <item>Alkalmazott nyelvészeti tanszék</item>
        <item>Alkalmazott társadalomtudományok tanszék</item>
        <item>Gépészmérnöki tanszék</item>
        <item>Matematika - Informatika tanszék</item>
        <item>Villamosmérnöki tanszék</item>
    </string-array>
    <string-array name="degreeList">
        <item>Automatika és alkalmazott informatika</item>
        <item>Fordító és tolmács</item>
        <item>Gépészmérnöki</item>
        <item>Távközlés</item>
        <item>Informatika</item>
        <item>Kertészmérnöki</item>
        <item>Kommunikáció és közkapcsolatok</item>
        <item>Mechatronika</item>
        <item>Számítástechnika</item>
        <item>Tájépítészet</item>
        <item>Fejlett mechatronikai rendszerek szak</item>
        <item>Növényorvos</item>
        <item>Számítógépes irányítási rendszerek szak</item>
        <item>Szoftverfejlesztés szak</item>
    </string-array>
    <string name="wrongYearInput">A megadott évszám nem megfelelő!</string>
    <string name="inputError">A mezők kitöltése kötelező!</string>
    <string name="confirmProfileData">A megadott adatok a későbbiekben nem módosíthatóak. Biztosan elküldi?</string>
    <string name="deleteProfilePicture">Profilkép törlése</string>
    <string name="changeProfilePicture">Profilkép módosítása</string>
    <string name="selectPicture">"Kép kiválasztása"</string>
    <string name="uploadImage">Kép feltöltése…</string>
    <string name="uploadingImageSuccessful">Sikeres képfeltöltés</string>
    <string name="confirmImageDeletion">Biztosan törli a képet?</string>
    <string name="enrollmentDate">Beiratkozás éve</string>
    <string name="eventTitle">Esemény leírása</string>
    <string name="seeEvents">Események megtekintése </string>
    <string name="hideEvents">Események elrejtése</string>
    <string name="myPosts">Saját bejegyzések</string>
    <string name="savedPosts">Mentett bejegyzések</string>
    <string name="deletePost">Bejegyzés törlése</string>
    <string name="editPost">Bejegyzés módosítása</string>
    <string name="postSaved">Bejegyzés mentve</string>
    <string name="postRemovedFromSaved">Bejegyzés törölve</string>
    <string name="deleteNews">Bejegyzés törlése</string>
    <string name="confirmDeleteNews">Biztosan törli a bejegyzést?</string>
    <string name="viewComments">Hozzászólások megtekintése</string>
    <string name="hideComments">Hozzászólások elrejtése</string>
    <string name="writeComments">Hozzászólás írása…</string>
    <string name="deleteComment">Hozzászólás törlése</string>
    <string name="confirmDeleteComment">Biztosan törli a hozzászólást?</string>
    <string name="search">Keresés</string>
    <string name="messageDelivered">Elküldve</string>
    <string name="messageSeen">Látta</string>
    <string name="writeMessage">Üzenet küldése…</string>
    <string name="isTyping">Éppen ír…</string>
    <string name="imageSent">Fényképet küldtél</string>
    <string name="imageReceived">fényképet küldött</string>
    <string name="postSent">Megosztottál egy bejegyzést</string>
    <string name="postReceived">megosztott egy bejegyzést</string>
    <string name="fileSent">Megosztottál egy fájlt</string>
    <string name="fileReceived">megosztott egy fájlt</string>
    <string name="newMessage">Új üzenet</string>
    <string name="sentAMessage">üzenetet küldött!</string>
    <string name="users">Felhasználók</string>
    <string name="online">online</string>
    <string name="offline">offline</string>
    <string name="attachFile">Fájl csatolása</string>
    <string name="createPoll">Szavazás létrehozása</string>
    <string name="exitAddNews">Biztosan elveti a módosításokat?</string>
    <string name="discardChanges">Módosítások elvetése</string>
    <string name="pollOption">Válaszlehetőség </string>
    <string name="deletePoll">Szavazás törlése</string>
    <string name="modifyPoll">Szavazás módosítása</string>
    <string name="pollError">Kérdés és min. 2 válaszlehetőség megadása kötelező!</string>
    <string name="addOption">+ Válaszlehetőség hozzáadása</string>
    <string name="confirmPollDeletion">Biztosan törli a szavazást?</string>
    <string name="newActivityPost">Új aktivitás</string>
    <string name="lastPost">Legutóbbi bejegyzések</string>
    <string-array name="filterNews">
        <item>@string/lastPost</item>
        <item>@string/newActivityPost</item>
    </string-array>
    <string name="publicCaption">Nyilvános</string>
    <string name="captionError">Min. 1 címke megadása kötelező!</string>
    <string name="downloading">Letöltés folyamatban…</string>
    <string name="sendForward">Továbbítás</string>
    <string name="likeNotification">kedvelte a hozzászólásod.</string>
    <string name="commentNotification">hozzászólt a bejegyzéshez.</string>
    <string name="newPostNotification">Új bejegyzés</string>
    <string name="addEvent">Esemény hozzáadása</string>
    <string name="generalSettings">Általános</string>
    <string name="postNotification">Bejegyzések értesítései</string>
    <string name="commentNotifSetting">Hozzászólások értesítései</string>
    <string name="messageNotification">Chat értesítések</string>
    <string name="eventNotification">Határidők értesítései</string>
</resources>
