<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreen"
    tools:context=".Activities.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/lobster"
        android:textColor="@color/colorWhite"
        android:text="@string/app_name"
        android:textSize="100sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:padding="20dp"
        android:layout_marginTop="220dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/moodleName"
            android:inputType="text"
            android:layout_margin="10dp"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/moodlePassword"
            android:inputType="numberPassword"
            android:padding="10dp"/>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="20dp"
            android:background="@drawable/button_background"
            android:textColor="@color/colorWhite"
            android:text="@string/login" />

        <CheckBox
            android:id="@+id/rememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:buttonTint="@color/colorGreen"
            android:text="@string/rememberMe" />
    </LinearLayout>

</RelativeLayout>