<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.AddNewsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addNews"
        android:fontFamily="@font/lobster"
        android:textColor="@color/colorGreen"
        android:layout_margin="20dp"
        android:textAlignment="center"
        android:textSize="45sp"/>

    <EditText
        android:id="@+id/newsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newsTitle"
        android:layout_margin="15dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/newsContent"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="top"
        android:inputType="textMultiLine"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/addImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:padding="10dp"
            android:layout_marginEnd="25dp"
            android:textColor="@color/colorWhite"
            android:text="@string/addImage"/>

        <TextView
            android:id="@+id/imageName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:layout_gravity="right"
        android:layout_margin="25dp"
        android:padding="10dp"
        android:textColor="@color/colorWhite"
        android:text="@string/send"/>

</LinearLayout>