<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/addProfileData"
        android:textSize="25sp"
        android:textColor="@color/colorGreen"
        android:textStyle="bold"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp">
            <RadioButton
                android:text="@string/teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"/>
            <RadioButton
                android:text="@string/student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </RadioGroup>

        <EditText
            android:id="@+id/yearInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="4"
            android:visibility="invisible"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/departmentInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/departmentList"
            android:layout_margin="5dp"
            />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/degreeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/degreeList"
            android:visibility="invisible"
            android:layout_margin="5dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:text="@string/send"/>

</LinearLayout>