<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray"
    tools:context=".Activities.AddNewsActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/addNewsContainer">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="200dp"
            android:background="@color/colorGreen">

            <ImageView
                android:id="@+id/previousPage"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_navigate_next_white_24dp"
                android:layout_margin="10dp"
                android:rotation="180"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:background="@android:color/transparent"
                android:text="@string/send"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/attachFile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_attach_file" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:padding="3dp"
                            android:text="@string/attachFile"
                            android:textColor="@color/colorGreen"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout
                        android:id="@+id/createPoll"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_poll" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:padding="3dp"
                            android:text="@string/createPoll"
                            android:textColor="@color/colorGreen"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/pollList"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/newsTitle"
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:hint="@string/newsTitle"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/newsContent"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_margin="5dp"
                        android:gravity="top"
                        android:inputType="textMultiLine"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/fileAttachments"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/captionContainer"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/addImageFromCamera"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_add_a_photo_black_24dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"/>

                <ImageView
                    android:id="@+id/addImageFromGallery"
                    android:layout_width="31dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/ic_image_black_24dp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/imageList"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" />

        </LinearLayout>
    </FrameLayout>

</androidx.core.widget.NestedScrollView>